--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
         "composer/installers": "^2.3",
         "cweagans/composer-patches": "^1.7",
         "drupal/admin_toolbar": "^3.6",
+        "drupal/civictheme_content_default": "^0.1.0",
+        "drupal/civictheme_drupal_cms": "^0.1.0",
+        "drupal/civictheme_drupal_cms_preinstall": "^0.1.0",
         "drupal/cms": "^1.0",
         "drupal/coffee": "^2",
         "drupal/config_split": "^2",
@@ -56,6 +59,45 @@
         {
             "type": "composer",
             "url": "https://packages.drupal.org/8"
+        },
+        {
+            "type": "package",
+            "package": {
+                "name": "drupal/civictheme_content_default",
+                "version": "0.1.1",
+                "type": "drupal-recipe",
+                "source": {
+                    "type": "git",
+                    "url": "https://github.com/richardgaunt/civictheme_content_default.git",
+                    "reference": "0.1.0"
+                }
+            }
+        },
+        {
+            "type": "package",
+            "package": {
+                "name": "drupal/civictheme_drupal_cms",
+                "version": "0.1.1",
+                "type": "drupal-recipe",
+                "source": {
+                    "type": "git",
+                    "url": "https://github.com/richardgaunt/civictheme_drupal_cms.git",
+                    "reference": "0.1.0"
+                }
+            }
+        },
+        {
+            "type": "package",
+            "package": {
+                "name": "drupal/civictheme_drupal_cms_preinstall",
+                "version": "0.1.1",
+                "type": "drupal-recipe",
+                "source": {
+                    "type": "git",
+                    "url": "https://github.com/richardgaunt/civictheme_drupal_cms__preinstall.git",
+                    "reference": "0.1.0"
+                }
+            }
         }
     ],
     "minimum-stability": "beta",
