--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "composer/installers": "^2.3",
         "cweagans/composer-patches": "^1.7",
         "drupal/admin_toolbar": "^3.6",
+        "drupal/civictheme": "1.x-dev@dev",
         "drupal/civictheme_content_default": "^0.1.0",
         "drupal/civictheme_drupal_cms": "^0.1.0",
         "drupal/civictheme_drupal_cms_preinstall": "^0.1.0",
